Bug 373935 - Bar graph: Sensor Label cannot be changed
Summary: Bar graph: Sensor Label cannot be changed
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: ksysguard (other bugs)
Version First Reported In: 5.8.3
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-20 05:02 UTC by Paul McAuley
Modified: 2020-09-03 11:03 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul McAuley 2016-12-20 05:02:29 UTC
If you add a sensor as a bar graph and right-click->properties->Sensors->Edit... the change in label is not saved.
Comment 1 Kishore Gopalakrishnan 2016-12-22 04:00:14 UTC
(In reply to Paul M from comment #0)
> If you add a sensor as a bar graph and
> right-click->properties->Sensors->Edit... the change in label is not saved.

I don't have an option to edit the label on Arch with ksysguard 5.8.4. Does opensuse make modifications to the program while packaging it?
Comment 2 azrdev 2017-01-17 09:49:50 UTC
I also cannot change the name at all, which makes a graph with 5 times "temp1" quite cumbersome.

Related to https://bugs.kde.org/show_bug.cgi?id=344498
Comment 3 Tom 2017-01-26 23:23:14 UTC
I can confirm this on Fedora 25 with the following installed:

ksysguard-5.8.5-1.fc25.x86_64
libksysguard-common-5.8.5-1.fc25.x86_64
ksysguardd-5.8.5-1.fc25.x86_64
libksysguard-5.8.5-1.fc25.x86_64

Note that if you save the tab as a file, you can edit the labels in the file and then open that file to get your labels changed.

The edit button works and the label shows as changed in the Edit Bar Graph Preferences window, but it never gets passed back to the main application.
Comment 4 groot 2020-06-30 08:52:01 UTC
- added a tab
- dragged cpu load/system/user load (float) onto the sensor area
- RMB on that bar graph (now labeled "User Load" and showing values around 1)
- pick "properties", then:
  - the **range** tab has a "title" field, which has no effect
  - sensors->edit pops up another dialog "Enter new label:" which, when OK'ed, has no effect either

Saving the tab shows that the title field -- which isn't really used -- is saved in its modified form.

In the properties dialog, repeatedly going through sensors->edit shows that the change of label **is** temporarily saved while the properties dialog is open, but not when the dialog is OK'ed.
Comment 5 Bug Janitor Service 2020-06-30 10:06:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/ksysguard/-/merge_requests/22
Comment 6 groot 2020-09-03 11:03:06 UTC
Git commit 902cf6b2ad94976aaa885d9f3e08cf7b0d5904ab by Adriaan de Groot.
Committed on 03/09/2020 at 10:47.
Pushed by adridg into branch 'master'.

Apply changed labels to the footer-display

The label can be edited in the dialog, but this information
wasn't being set again on the footers in the graph display.

M  +18   -0    gui/SensorDisplayLib/DancingBars.cpp

https://invent.kde.org/plasma/ksysguard/commit/902cf6b2ad94976aaa885d9f3e08cf7b0d5904ab