Apply changed labels to the footer-display

The label can be edited in the dialog, but this information
wasn't being set again on the footers in the graph display.

BUG: 373935